# Optimize-methods

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README.md  Ref.md  deepstream_51  deepstream_6.1  deepstream_60  deepstream_61  docker_dev
Compare_CPU_Inference/: Readme.md  requirements.txt  resnet_onnx.py  resnet_openvino.py  resnet_pytorch.py  utils.py
Compressing_MobileNet_on_ImageNet/: data.py  model.py  train.py  utils.py
Deepstream_cpp/: README.md
Deepstream_cpp/deepstream-test1/: CMakeLists.txt  Readme.md  config.txt  deepstream_test1.cpp  torch_2_onnx.py
Deepstream_python/: Dockerfile  INSTALL.MD
Deepstream_python/deepstream-test1/: config.txt  main.py
Fusing_Batchnorm_and_Convolution_Runtime/: fusing_batchnorm_and_conv.py
How_to_train_Resnet/: How_to_train_ResNet.ipynb  Readme.md  core.py  dawn.py
Quantization_aware_training/: cifar10.py
Video_Decode/: README.md
Video_Decode/AppDec/: AppDec.cpp  CMakeLists.txt
Video_Decode/NvDecoder/: NvDecoder.h
Video_Decode/libs/: libnvidia-encode.so.510.85.02
dockerfiles/: Dockerfile  Dockerfile_infer  Dockerfile_train  deepstream_60  deepstream_60_scratch  ds_dev
ffcv_practice/: ffcv_test.py  simple_dla.py
ffcv_sample/: baseline.py  cifar_writer.py  default_config.yaml  ffcv_test.py
